Back out previous change to add endoresed directory automatically.  method used does some very strang things to the classloader
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@2580 ab3bd59b-922f-494d-bb5f-6f0a3c29deca